<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/login"
            />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MyApp.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/textUsername"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.MyApp.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock24"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.MyApp.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login" />

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/register"-->
<!--                style="@style/Widget.MyApp.Button.TextButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="12dp"-->
<!--                android:layout_marginRight="12dp"-->
<!--                android:layout_toStartOf="@id/login_button"-->
<!--                android:layout_toLeftOf="@id/login_button"-->
<!--                android:text="@string/register" />-->

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button">
                <TextView
                    android:id="@+id/tvCekAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apakah_kamu_memiliki_akun"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button" />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@id/tvCekAccount"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>