<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/img"
            android:layout_centerHorizontal="true"
            android:src="@drawable/account"
            android:layout_marginTop="30dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:id="@+id/namefield"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:outlineAmbientShadowColor="@color/purple_200"
                android:src="@drawable/ic_user_solid" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/detailName"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/namaAsli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama"
                android:layout_marginLeft="60dp"
                android:text="namaasli"
                android:textSize="15dp" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/usernamefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/namefield"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:outlineAmbientShadowColor="@color/purple_200"
                android:src="@drawable/ic_username" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/detailUsername"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usernameAsli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:layout_marginLeft="60dp"
                android:text="namaasli"
                android:textSize="15dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/backbutton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernamefield"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/kembali_kemenu_home" />
    </RelativeLayout>

</FrameLayout>